# PokeQuiz

./: ReadMe.md  pyproject.toml
pokequiz/: _init.py  bgm.py  cli.py  data.py  models.py  sprites.py
pokequiz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pokequiz/games/: ability_assessor.py  ability_effects.py  all_natural.py  catch_hatch.py  category_quiz.py  characteristic_decoder.py  daycare_detective.py  defensive_profile.py  dexacted.py  dexit.py  environment_map.py  ev_forensic.py  evolutionary_enigma.py  exp_yield.py  fling_force.py  growth_rate_guess.py  international_names.py  item_lore.py  legendary_yahtzee.py  level_ladder.py  level_race.py  machine_serial.py  mastermind_types.py  method_man.py  metronome_blacklist.py  missing_link.py  move_chain_connections.py  move_match.py  movepool_madness.py  movepool_sudoku.py  nature_flavor_matrix.py  odd_one_out.py  pokedoku.py  pokemon_tetris.py  power_levels.py  safari_zone.py  sell_quiz.py  squirdle.py  stamina_hangman.py  stat_quiz.py  (+5 more)
tests/: test_pokedoku.py  test_rules.py  test_sprites.py  test_squirdle.py  test_statle.py  test_statle_optimal.py
